objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <referenceTo>Business_Area__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MDM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDM External Id</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Please enter Site Region</description>
        <inlineHelpText>Site Region is used to identify which region the Site belongs to.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>Business_Area__r.SBU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This business site belongs to the country.</description>
        <label>Site Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business__c</columns>
        <columns>NAME</columns>
        <columns>Business_Area__c</columns>
        <columns>MDM_External_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Region__c</columns>
        <columns>Site_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CD_SBU</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Business_Area__c</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>Site_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>CD</value>
        </filters>
        <label>All CD SBU</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FILTERS_SBU</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Business_Area__c</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>Site_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>FILTERS</value>
        </filters>
        <label>All FILTERS SBU</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_HPC_SBU</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Business_Area__c</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>Site_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>HPC</value>
        </filters>
        <label>All HPC SBU</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ST_SBU</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Business_Area__c</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>Site_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>ST</value>
        </filters>
        <label>All ST SBU</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>